# spf-server

./: .gitignore  AGENTS.md  Backlog.md  Cargo.toml  README.md  pdftodat.zsh  spf.postman_collection.json  swagger.yaml
.devcontainer/: devcontainer.json
cards/: fac_cards.csv
cards/SPFB1983/: 83Covers.txt  83DB.txt  83DL.txt  83DL_plain.txt  83DLa.txt  83K.txt  83KR.txt  83LB.txt  83OL.txt  83P.txt  83PR.txt  83QB.txt  83RB.txt  83Rosters.txt  83TE.txt  83Team.txt  83WR.txt
data/1983/: Atlanta.json  Baltimore.json  Buffalo.json  Chicago.json  Cincinnati.json  Cleveland.json  Dallas.json  Denver.json  Detroit.json  Green_Bay.json  Houston.json  Kansas_City.json  L.A._Raiders.json  L.A._Rams.json  Miami.json  Minnesota.json  N.Y._Giants.json  N.Y._Jets.json  New_England.json  New_Orleans.json  Philadelphia.json  Pittsburgh.json  San_Diego.json  San_Francisco.json  Seattle.json  St._Louis.json  Tampa_Bay.json  Washington.json  index.json
docs/: README.md
docs/design/: code-style.md  commands.md  data-pipeline.md  game-management.md  openapi-utoipa.md  testing-strategy.md  workspace-structure.md  ws-events-architecture.md
docs/plans/: tech-debt.md  testing-plan.md  ws-events-stage1.md  ws-events-stage2.md  ws-events-stage3.md  ws-events-stages.md
docs/plans/completed/: README.md  ws-events-stage1.md  ws-events-stage2.md  (+2 more)
spf/: Cargo.toml
spf - 1/: Get Def Lineup.yml  Get Next Types.yml  Get Off Lineup.yml  Get Player.yml  Get Plays.yml  Get State.yml  Get Team Players.yml  Run Kickoff.yml  Run Play 1.yml  Run Play 2.yml  Save Game.yml  Set Cowboys Def Lineup.yml  Set Def Call - Pass Defense.yml  Set Def Call - Run Defense.yml  Set Kickoff Def Call.yml  Set Kickoff Def Lineup.yml  Set Kickoff Off Call.yml  Set Kickoff Off Lineup.yml  Set Off Call - Pass.yml  Set Off Call - Run.yml  Set Play Type - Kickoff.yml  Set Play Type - Standard.yml  Set Redskins Off Lineup.yml  Start Game.yml  opencollection.yml
spf/src/: game.rs  main.rs  webendpoint.rs
spf_cli/: Cargo.toml
spf_cli/src/: main.rs
spf_core/: Cargo.toml
spf_core/src/: lib.rs  lineup.rs  loader.rs  persist.rs  players.rs  shiftable.rs  stats.rs
spf_macros/: Cargo.toml
spf_macros/src/: lib.rs
src/: game.rs  main.rs  webendpoint.rs
src/game/: engine.rs  fac.rs  kickoff_play.rs  lineup.rs  loader.rs  players.rs  standard_play.rs  stats.rs
(+22 files in other folders)
