[package]
name = "spf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spf_macros = { path = "../spf_macros" }



actix-web = "4.3.1"
dyn-clone = "1.0.12"
itertools = "0.11.0"
lazy_static = "1.4.0"


serde = { version = "1.0.175", features = ["derive"] }
serde_derive = "1.0.175"
serde_json = "1.0.103"
strum_macros = "0.25.1"
actix-cors = "0.6.4"
csv = "1.2.2"
regex = "1.9.4"
rand = "0.8.5"


