[package]
name = "spf_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spf-cli"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
spf_core = { path = "../spf_core" }
clap = { version = "4", features = ["derive"] }
