[package]
name = "spf_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
spf_macros = { path = "../spf_macros" }

serde = { version = "1.0.175", features = ["derive"] }
serde_derive = "1.0.175"
serde_json = "1.0.103"
strum = "0.25.0"
strum_macros = "0.25.1"
regex = "1.9.4"
itertools = "0.11.0"
dyn-clone = "1.0.12"
erased-serde = "0.3.31"
enum-as-inner = "0.6.0"
utoipa = { version = "5", features = ["actix_extras"] }
